# course_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  improvements.md  marketplace_dump.json  pagination_test.json  post_payment_response.json  pyproject.toml  requirements.txt
app/: app.py
app/bot/: loader.py
app/bot/data/: config.py  items.py  shipping_methods.py
app/bot/filters/: __init__.py  is_admin.py
app/bot/handlers/errors/: error_handler.py
app/bot/handlers/users/: __init__.py  catalog.py  file_id.py  help.py  inline.py  shipping.py  start.py
app/bot/keyboards/inline/: __init__.py  callbacks.py  catalog.py  categories.py  custom_buttons.py
app/bot/middlewares/: __init__.py  throttling.py
app/bot/utils/: notify_admins.py
app/bot/utils/misc/: logging.py
app/marketplace/: admin.py  models.py
app/marketplace/migrations/: 0001_initial.py  0002_delete_user.py
app/webapp/: settings.py  urls.py
bot/data/: config.py
bot/handlers/users/: catalog.py  help.py
bot/utils/: set_bot_commands.py
webapp/marketplace/: models.py
webapp/webapp/: settings.py
