[tool.poetry]
name = "app"
version = "1.0.0"
description = "Course project: Marketplace in Telegram"
authors = ["Str1kez <vazinov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.21"
Django = "^4.1"
django-mptt = "^0.13.4"
environs = "^9.5.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
dj-database-url = "^1.0.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
